[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-team-9"
version = "0.1.0"
description = "CS639 Project Disentangling Safety and Utility in LLM Activation Spaces"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "numpy>=1.24.0",
]
